--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "web": "server.js",
   "scripts": {
     "start": "ts-node-dev --respawn server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
