--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node dist/server.js",
-    "postinstall": "tsc",
+    "postinstall": "tsc && mv -i -v build dist/ ",
     "dev": "ts-node-dev --respawn server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
