--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node dist/server.js",
-    "tsc": "tsc",
-    "heroku-postbuild": "npm run tsc && mv -i -v build dist/ ",
+    "heroku-postbuild": "tsc && mv -i -v build dist/ ",
     "dev": "ts-node-dev --respawn server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +19,7 @@
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^4.5.2"
   }
 }
