--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node ./api/dist/server.js",
     "client-build": "cd ./client && npm run build ",
     "api-build": "cd ./api && tsc",
-    "install": "cd ./client && npm install && cd ./api && npm install",
+    "install-client-dep": "cd ./client && npm install",
+    "install-api-dep": "cd ./api && npm install",
+    "install": "install-client-dep && install-api-dep",
     "heroku-postbuild": "npm run client-build && npm run api-build && mv -i -v ./client/build ./api/dist/build ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
