--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "install-client-dep": "cd ./client && npm install",
     "install-api-dep": "cd ./api && npm install",
     "install": "npm run install-client-dep && npm run install-api-dep",
-    "move-build": "mv -i -v ./client/build ./api/dist/build",
+    "move-build": "mv -i -v ./client/build ./api/dist/",
     "heroku-postbuild": "npm run client-build && npm run api-build &&  npm run move-build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
