--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Online Jewelry store",
   "main": "index.js",
   "scripts": {
-    "start": "node ./api/dist/server.js",
+    "start": "node ./backend/dist/server.js",
     "client-build": "cd ./client && npm run build ",
     "tsc": "tsc",
-    "api-build": "cd ./api && npm run tsc",
+    "backend-build": "cd ./backend && npm run tsc",
     "install-client-dep": "cd ./client && npm install",
-    "install-api-dep": "cd ./api && npm install",
+    "install-api-dep": "cd ./backend && npm install",
     "install": "npm run install-client-dep && npm run install-api-dep",
-    "move-build": "mv -i -v ./client/build ./api/dist/",
+    "move-build": "mv -i -v ./client/build ./backend/dist/",
     "heroku-postbuild": "npm run client-build && npm run api-build &&  npm run move-build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
