--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "install-client-dep": "cd client && npm install",
     "install-api-dep": "cd backend && npm install",
     "install": "npm run install-client-dep && npm run install-api-dep",
-    "move-build": "mv -i -v client/build backend/dist/build",
+    "move-build": "mv client/build backend/dist/",
     "heroku-postbuild": "npm run client-build && npm run backend-build &&  npm run move-build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
