--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "install-api-dep": "cd backend && npm install",
     "install": "npm run install-client-dep && npm run install-api-dep",
     "move-build": "mv client/build backend/dist/",
-    "heroku-postbuild": "npm run client-build && npm run backend-build &&  npm run move-build",
+    "heroku-postbuild": "npm run client-build && npm run backend-build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
