--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node backend/dist/server.js",
     "client-build": "cd client && npm run build ",
-    "tsc": "tsc",
-    "backend-build": "cd backend && npm run tsc",
+    "backend-build": "cd backend && tsc",
     "install-client-dep": "cd client && npm install",
     "install-api-dep": "cd backend && npm install",
     "install": "npm run install-client-dep && npm run install-api-dep",
