--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "samaria_jewelry",
+  "name": "api",
   "version": "1.0.0",
-  "description": "Online Jewelry store",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node backend/dist/server.js",
-    "client-build": "cd client && npm run build ",
-    "build": "tsc",
-    "backend-build": "cd backend && npm run build",
-    "install-client-dep": "cd client && npm install",
-    "install-api-dep": "cd backend && npm install",
-    "install": "npm run install-client-dep && npm run install-api-dep",
-    "move-build": "mv client/build backend/dist/",
-    "heroku-postbuild": "npm run client-build && npm run backend-build",
+    "start": "node dist/server.js",
+    "build": "tsc && cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "dev": "ts-node-dev --respawn server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hishamss/samaria_jewelry.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hishamss/samaria_jewelry/issues"
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.9",
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8"
   },
-  "homepage": "https://github.com/hishamss/samaria_jewelry#readme"
+  "dependencies": {
+    "express": "^4.17.1",
+    "typescript": "^4.5.2"
+  }
 }
