--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "typescript": "^4.5.2"
   }
