--- a/package.json
+++ b/package.json
@@ -17,11 +17,18 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.9",
+    "@types/validator": "^13.7.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.11.0",
+    "sequelize-typescript": "^2.1.1",
     "typescript": "^4.5.2"
   }
 }
