--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.9",
     "@types/validator": "^13.7.0",
+    "sequelize-cli": "^6.3.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8"
   },
