--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +26,8 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
