--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.11.0",
     "sequelize-typescript": "^2.1.1",
+    "stripe": "^10.15.0",
     "typescript": "^4.5.2"
   }
 }
