--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express-oauth2-jwt-bearer": "^1.1.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
+    "nodemailer": "^6.8.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
